# SeniorDesign

./: .gitignore  CMakeLists.txt  README.md  Xbee_api_test  main.cpp
Charge Controller/: README.md
Image Correction/: CMakeLists.txt  build  main.c  main.cpp
Image Correction/Libraries/: bmp.cpp  bmp.hpp  corner.cpp  corner.hpp  file_io.c  file_io.h  full_lib.h  imglib.c  imglib.cpp  imglib.h  imglib.hpp  matrix.cpp  matrix.hpp  my_lib.h  utils.c  utils.cpp  utils.h  utils.hpp
Image Correction/libraries/: corner.cpp  corner.hpp  matrix.cpp  matrix.hpp  utils.cpp  utils.hpp
ImageCorrection/: CMakeLists.txt  README.md  main.cpp
ImageCorrection/libraries/: bmp.hpp  corner.cpp  imglib.cpp  imglib.hpp  matrix.hpp  utils.cpp  utils.hpp
Images/: 1  PicSnap  Picture_Snapping.c  video.avi
Motor Controls/: 1  ADC.c  Mov  Mov1.c  MovCap  Mov_Cap  Mov_w_FB.c  Mov_w_FB_Cap_Image.c  PicSnap  README.md  Senior Design Project.cbp  Senior Design Project.layout  Servo Movement 1.c  WPiMov  adc.sh  adc_compile.sh  adc_compile1.sh  adc_practice.c  adc_sample.c  streamer.txt
MotorControls/: Picture_Snapping.c  Senior Design Project.layout
MotorControls/PiBits-master/ServoBlaster/user/: servod
Xbee/: copyFileTest.cpp  msgTest  receiveImage.cpp  sendImage.cpp  serialRead.c  serialTest.c  test.jpeg~  test.txt~  xMessage.cpp  xSerial.hpp  xbee.cpp  xbeeRead  xbeeRead.c  xbeeTest  xbeeTest.c
imagecorrection/: CMakeLists.txt
imagecorrection/libraries/: bmp.cpp  bmp.hpp  corner.cpp  corner.hpp  imglib.cpp  imglib.hpp  matrix.cpp  utils.cpp  utils.hpp
imagecorrection/tests/: img_test.cpp  transform.cpp
imagecorrection/webtools/: coordinates.html  coordinates.js  styles.css
images/: Image4  Picture_Snapping.c
integration/: calibrate.cpp  main.cpp
integrationTest/: 1  Mov_w_FB_Cap_Image.c  Mov_w_FB_Cap_Image2.c  integrationTest  sendImage  sendImage.c  xMessage.hpp  xSerial.hpp  xbeeRead  xbeeRead.c  xbeeTest  xbeeTest.c
integrationtest/: receiveImage  receiveImage.c  xMessage.hpp  xSerial.hpp  xbeeRead  xbeeRead.c  xbeeTest  xbeeTest.c
motorcontrols/: 1  CMakeLists.txt  MovCap  Mov_w_FB_Cap_Image.c  Precision_Echo.c  Senior Design Project.cbp
motorcontrols/libraries/: calibration.cpp  calibration.hpp  servo.c  servo.h
motorcontrols/locations/: locations.txt
motorcontrols/tests/: calib_test.cpp  capture.c
powerSystem/: README.md
powerSystem/firmware/header/: powerSystem.h
powerSystem/firmware/nbproject/: Makefile-default.mk  Makefile-genesis.properties  configurations.xml  project.xml
powerSystem/firmware/source/: powerSystem.c
powersystem/: CMakeLists.txt
powersystem/firmware/nbproject/: Makefile-genesis.properties
powersystem/firmware/nbproject/private/: SuppressibleMessageMemo.properties  configurations.xml  private.xml
powersystem/firmware/power_system.X/: ADC.c  ADC.h  power_system.c  power_system.h
powersystem/firmware/power_system.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
powersystem/firmware/powersystem.X/: ADC.c  ISR.c  ISR.h  SPI.c  SPI.h  memory.c  memory.h  powerSystem.c  powerSystem.h
powersystem/firmware/powersystem.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
powersystem/firmware/powersystem.X/nbproject/private/: configurations.xml  private.xml
powersystem/hardware/: power_system.pro  power_system.sch
powersystem/software/: SPI_shutdown.c  SPI_shutdown.h
startup/: test
wiringPi/examples/: serialRead  serialRead.c  serialTest  serialTest.c  xbeeRead  xbeeRead.c  xbeeTest  xbeeTest.c
xbee/: CMakeLists.txt  config.txt  parse  receiveImage  receiveImage.c  receiveImage.cpp  sendImage.cpp  testParse  testParse.cpp  xMessage.hpp  xParseMessage.cpp  xParseMessage.hpp  xSerial.hpp  xbeeRead  xbeeRead.c  xbeeTest  xbeeTest.c  xmodem.c  xmodem.h
xbee/libraries/: xMessage.hpp  xSerial.hpp  xmodem.c
xbee/tests/: xbeeRead.cpp  xbeeTest.cpp
